# zcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.reproducible  LICENSE  README.md  SECURITY.md  attestation_proof.json  bill_of_health.md  build.rs  install.sh  verify_report.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: alerting.yml  audit.yml  ci.yml  codeql.yml  cross-repo-dispatch.yml  release.yml  security.yml
Formula/: zcp.rb
fixtures/: dashboard.html
man/: README.md  zerocopy-audit.1
src/: capability.rs  jitter_tax.rs  main.rs  rich_output.rs  ui.rs
src/commands/: audit.rs  bench.rs  build.rs  deploy.rs  diligence.rs  identity.rs  init.rs  keys.rs  mod.rs  monitor.rs  profile.rs  trace.rs  upgrade.rs  verify.rs
src/tui/: boot_matrix.rs  error_tree.rs  mod.rs  monitor.rs
test_batch/: invalid_proof.json  valid_proof1.json  valid_proof2.json
zcp-audit/: Cargo.toml
zcp-audit/src/: lib.rs
zcp-chain/: Cargo.toml
zcp-chain/src/: chain.rs  lib.rs  mfa.rs  wallet.rs
zcp-core/: Cargo.toml
zcp-core/src/: error.rs  lib.rs  proof.rs  verifier.rs
zcp-node/: Cargo.toml  index.js  package.json  tsconfig.json
zcp-node/__tests__/: zcp.test.ts
zcp-node/src/: index.ts  lib.rs
zcp-node/test/: smoke.js
zcp-reporting/: Cargo.toml
zcp-reporting/src/: lib.rs  pdf_report.rs
zcp-wasm/: Cargo.toml
zcp-wasm/src/: lib.rs
zcp-wasm/tests/: web.rs
zerocopy-audit/: Cargo.toml  build.rs
zerocopy-audit-common/: Cargo.toml
zerocopy-audit-common/src/: lib.rs
zerocopy-audit-ebpf/: Cargo.toml
zerocopy-audit-ebpf/src/: main.rs
zerocopy-audit/src/: main.rs
