[package]
name = "zerocopy-audit"
version = "1.0.0"
edition = "2021"
description = "HFT infrastructure latency audit tool"
authors = ["ZeroCopy Systems <engineering@zerocopy.systems>"]
license = "MIT"

[[bin]]
name = "zcp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.12"
colored = "3.0"
hex = "0.4.3"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
sys-info = "0.9"
zero-copy-utils = { path = "../../packages/zero-copy-utils" }
sentinel-shared = { path = "../../packages/sentinel-shared" }
ethers = { version = "2.0", default-features = false, features = ["rustls", "ws"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
dotenv = "0.15"
anyhow = "1.0"
zeroize = "1.3"  # Secure memory wiping for sensitive data
base64 = "0.22"
aws-nitro-enclaves-nsm-api = "0.4"
coset = "0.4"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.0", features = ["v4"] }

