[package]
name = "zcp-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
colored = "3.0"
indicatif = "0.18"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
sys-info = "0.9"
thiserror = "1.0"
zeroize = "1.3"
tokio = { version = "1", features = ["full"] }
aws-nitro-enclaves-nsm-api = "0.4"
coset = "0.4"

[features]
default = []
