[package]
name = "zcp-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
colored = "3.0"
ethers = { version = "2.0", default-features = false, features = ["rustls", "ws"] }
hex = "0.4"
indicatif = "0.18"
qr2term = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
totp-rs = { version = "5.7.0", features = ["otpauth", "qr", "gen_secret"] }
zeroize = "1.3"

[features]
default = []
