[package]
name = "zcp-core"
version = "0.1.0"
edition = "2021"
description = "ZeroCopy SDK - Verify Sovereign Attestations (.zcp proofs)"
license = "MIT"
repository = "https://github.com/zerocopy-systems/zcp-sdk"
keywords = ["attestation", "enclave", "nitro", "verification"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography (for signature verification)
sha2 = "0.10"
hex = "0.4"

# Error Handling
thiserror = "1.0"

# WASM Support (optional)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
