[package]
name = "zcp-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["async", "napi4"] }
napi-derive = "2.12.2"
sentinel-client = { path = "../../engine/crates/sentinel-client" }
sentinel-shared = { path = "../../engine/crates/sentinel-shared" }
tokio = { version = "1", features = ["full"] }
hex = "0.4"

[build-dependencies]
napi-build = "2"
