[package]
name = "zcp-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for ZeroCopy attestation verification in browsers"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

# Note: [profile.release] moved to workspace root Cargo.toml
