[package]
name = "zerocopy-audit-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "^0.1.1"
zerocopy-audit-common = { path = "../zerocopy-audit-common", features = ["bpf"] }

[build-dependencies]
aya-build = "^0.1.0"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
strip = "none" # bpf requires symbol info

[workspace]
