[package]
name = "zerocopy-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
zerocopy-audit-common = { path = "../zerocopy-audit-common", features = ["user"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = ">=0.11", features = ["async_tokio"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
